plugins {
    id 'org.jetbrains.intellij' version '1.17.3'
}

group 'pers.zlf'

java {
    sourceCompatibility = 17
    targetCompatibility = 17
}

intellij {
    version = '2022.3'
    type = 'IU'
    plugins = ['java','DatabaseTools']
    updateSinceUntilBuild = false
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.freemarker:freemarker:2.3.23'
    implementation ('org.eclipse.jgit:org.eclipse.jgit:6.8.0.202311291450-r'){
        exclude group:"org.slf4j"
    }
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'com.google.zxing:javase:3.5.3'
    implementation("com.cronutils:cron-utils:9.2.1") {
        exclude group: "org.slf4j"
    }
    implementation 'org.apache.poi:poi:5.2.2'
    implementation 'org.apache.poi:poi-ooxml:5.2.2'
}
